--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -515,6 +517,80 @@ main{
     position: relative;
     top: -18px;
     /* top: -20px; */
+}
+
+
+.suggestions-title{
+    font-size: 20px;
+    color: #222;
+    font-weight: normal;
+}
+
+
+.sug-list{
+    display: flex;
+
+}
+
+.sug-list ul{
+    margin: 0;
+    padding: 0;
+    padding-right: 50px;
+    
+}
+
+.sug-list ul li{
+    list-style: none;
+    color: rgb(26, 13, 171);
+    padding-bottom: 8px;
+}
+
+
+footer{
+    
+    justify-self: flex-end;
+    /* align-self: flex-end; */
+    position: relative;
+    top: 150px;
+
+}
+
+.location-text{
+    display: flex;
+    margin-left: 9%;
+    padding: 13px;
+}
+.location{
+    background-color: #eee;
+    border: 1px solid #ccc;
+}
+
+.country, .city ,.location-details{
+    margin-right: 15px;
+    color: #555;
+}
+
+.location p {
+    margin: 0;
+}
+
+.bottom-nav{
+    background-color: #eee;
+
+}
+.bottom-nav ul{
+    display: flex;
+    margin: 0;
+    padding: 15px;
+    margin-left: 9%;
+
+}
+.bottom-nav ul li{
+    list-style: none;
+    padding-right: 20px;
+}
+.bottom-nav ul li a{
+    text-decoration: none;
 }
 
 
